Docker and database

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "UrbanFiestaConnection":"Server=127.0.0.1;Port=5432;Database=UrbanFiestaDB;User Id=postgres;Password=mysecretpassword;"    
+    "UrbanFiestaConnection":"Server=localhost;Port=5432;Database=UrbanFiestaDB;User Id=postgres;Password=mysecretpassword;"
   }
 }
