--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "UrbanFiestaConnection":"Server=localhost;Port=5432;Database=UrbanFiestaDB;User Id=postgres;Password=mysecretpassword;"
+    "UrbanFiestaConnection": "Server=postgres;Port=5432;Database=UrbanFiestaDB;User Id=tiago;Password=mysecretpassword;"
   }
 }
